Fix responsive navbar issues on mobile devices

--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -19,7 +19,11 @@
     box-sizing: border-box;
     font-family: 'Spartan', sans-serif;
 }
-
+html , body{
+    width: 100%;
+    height: 100%;
+   overflow-x: hidden;
+}
 /* base typography */
 h1{
     font-size: 50px;
